# yyds-harness

./: .gitignore  .skill_evolve_counter  .yoyo.toml  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_GAP.md  Cargo.toml  ECONOMICS.md  IDENTITY.md  LINEAGE.md  README.md  build.rs  dispatch_command_output.rs  install.ps1  install.sh
.yoyo/: context-semantic-index.json  context-semantic-index.json.bak  memory.json  social-state.json
docs/: activegraph-yoagent-state-contract.md  book.toml  deepseek-native-baseline.md  deepseek-native-bootstrap-audit.md  deepseek-native-bootstrap-review.md  deepseek-native-production-readiness-gap.md  deepseek-prompt-cache-layout.md  harness-evolution-goal.md
journals/: JOURNAL.md  llm-wiki.md
memory/: active_learnings.md  active_social_learnings.md  learnings.jsonl  social_learnings.jsonl
scripts/: append_state_event.py  append_terminal_state_events.py  build_evolution_dashboard.py  build_site.py  create_address_book.sh  daily_diary.sh  deepseek_fitness_eval.py  evolve.sh  extract_trajectory.py  format_discussions.py  format_issues.py  gnome_fitness.py  lint_evolve_heredocs.py  log_feedback.py  merge_state_delta.py  preseed_session_plan.py  replay_state_events.py  scan_commitments.py  skill_evolve.sh  skill_evolve_report.py  social.sh  state_graph_tools.py  summarize_state_gnomes.py  synthesize_learnings.py  task_completion_gate.py  task_lineage.py  task_manifest.py  task_verification_gate.py  test_append_terminal_state_events.py  test_build_evolution_dashboard.py  test_evolve_skill_alignment.py  test_extract_trajectory.py  test_replay_state_events.py  test_scan_commitments.py  test_skill_evolve_harness.py  test_state_graph_tools.py  test_task_lineage_feedback.py  test_task_manifest.py  verify_evo_readiness.py  yoyo_context.sh
session_plan/: assessment.md  issue_responses.md  task_01.md  task_02.md  task_03.md
skills/: _journal.md
src/: agent_builder.rs  banner.rs  cli.rs  cli_config.rs  commands.rs  commands_ast_grep.rs  commands_bg.rs  commands_config.rs  commands_context.rs  commands_deepseek.rs  commands_dev.rs  (+64 more)
(+4675 files in other folders)
