[package]
name = "yoyo-ds-harness"
version = "0.1.13"
edition = "2021"
description = "A DeepSeek-native coding agent harness that learns from its own failures."
license = "MIT"
repository = "https://github.com/yologdev/yyds-harness"
homepage = "https://github.com/yologdev/yyds-harness"
documentation = "https://github.com/yologdev/yyds-harness"
readme = "README.md"
keywords = ["agent", "cli", "coding-agent", "deepseek", "harness"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "yoyo"
path = "src/bin/yoyo.rs"

[[bin]]
name = "yyds"
path = "src/bin/yyds.rs"

[dependencies]
yoagent = { version = "0.8.3", features = ["openapi"] }
yoagent-state = "0.2.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "15"
async-trait = "0.1"
glob = "0.3"
regex = "1"
base64 = "0.22"
tokio-util = "0.7.18"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
